Add download by link spotify

--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,5 @@
-TOKEN=ygshsWQHdNwwUZJjBIujPQaQgTmtyDwEfGGVxVIH
+# TOKEN=ygshsWQHdNwwUZJjBIujPQaQgTmtyDwEfGGVxVIH
+TOKEN=fbfcddeeb5381f528e431adafaa4a2a4
 
 FULL_DIR=/home/zero/Documents/python/MusicDownloader/music/
 
