--- a/requirements.txt
+++ b/requirements.txt
@@ -18,15 +18,18 @@ outcome==1.3.0.post0
 packaging==24.0
 Pillow==10.1.0
 pycryptodomex==3.20.0
+pyfiglet==1.0.2
 PySocks==1.7.1
 python-dotenv==1.0.1
 requests==2.31.0
+selenium==4.19.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 tabulate==0.9.0
 toml==0.10.2
+tqdm==4.66.2
 trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.11.0
