--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ outcome==1.3.0.post0
 packaging==24.0
 Pillow==10.1.0
 pycryptodomex==3.20.0
-pyfiglet==1.0.2
 PySocks==1.7.1
 python-dotenv==1.0.1
 requests==2.31.0
@@ -35,5 +34,6 @@ trio-websocket==0.11.1
 typing_extensions==4.11.0
 urllib3==2.2.1
 websockets==12.0
+wget==3.2
 wsproto==1.2.0
 yt-dlp==2024.4.9
