--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ eyed3==0.9.7
 filetype==1.2.0
 h11==0.14.0
 idna==3.6
+lyricsgenius==3.0.1
 musicbrainzngs==0.7.1
 mutagen==1.47.0
 oauthlib==3.2.2
